data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_846.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\93\80\80\80\00\01\01\42\0d\69\6d\70"
    "\6f\72\74\65\64\5f\66\75\6e\63\00\00\03\82\80\80"
    "\80\00\01\00\0a\8c\80\80\80\00\01\86\80\80\80\00"
    "\00\01\10\00\01\0b"
  )
""
)